--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,9 @@
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
     <string name="no_track_time">нет данных</string>
     <string name="btn_update">Обновить</string>
+    <string name="recent_tracks_list_title">Вы искали</string>
+    <string name="app_preference_file_name">search_history</string>
+    <string name="recent_tracks_list_key">RECENT_SEARCH_KEY</string>
+    <string name="clear_history_button">Очистить историю</string>
+    <string name="search_refresh_button_title">Обновить</string>
 </resources>
