--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
     <string name="player_track_property_release">Год</string>
     <string name="player_track_property_album">Альбом</string>
     <string name="player_track_property_length">Длительность</string>
+    <string name="long_track_name">Длительность</string>
 </resources>
