--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,5 @@
     <string name="player_track_property_album">Альбом</string>
     <string name="player_track_property_length">Длительность</string>
     <string name="long_track_name">Длительность</string>
+    <string name="the_beatles">The Beatles</string>
 </resources>
