--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,5 @@
     <string name="long_track_name">Длительность</string>
     <string name="the_beatles">The Beatles</string>
     <string name="track">track</string>
+    <string name="intent_track_key">track</string>
 </resources>
